--- a/ui/package.json
+++ b/ui/package.json
@@ -14,12 +14,13 @@
 		"@emotion/styled": "^11.11.0",
 		"@mui/icons-material": "^5.14.1",
 		"@mui/material": "^5.14.1",
+		"axios": "^1.4.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.14.2"
 	},
 	"devDependencies": {
-		"@types/react": "^18.2.15",
+		"@types/react": "^18.2.17",
 		"@types/react-dom": "^18.2.7",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
