--- a/.github/workflows/master_jattestfront.yml
+++ b/.github/workflows/master_jattestfront.yml
@@ -15,6 +15,7 @@ jobs:
     defaults:
       run:
         working-directory: ./ui
+    
     steps:
       - uses: actions/checkout@v2
 
@@ -28,6 +29,9 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
+          
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
         
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
@@ -48,6 +52,9 @@ jobs:
         with:
           name: node-app
 
+      - name: unzip artifact for deployment
+        run: unzip release.zip -d ui
+        
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
